- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Allow keys Home/End on windows
- Video layers window can now be backgrounded
- Debug DMA window can now be backgrounded
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default
- Now rainbow bars on windows title are visible on all GUI Styles when an error or splash message appears
- Added a direct function to open Breakpoints window

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently
- Allow right click on the device icons located on the lower part of the ZX Desktop

* Fixes:

Fixed cpu+memory leak bug using Linux and Xwindow driver. This is a bug that has always existed (a "long life bug" XD)
Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed right click on upper buttons when menu closed and no windows open
Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers
Fixed TZX autoload as Real Tape on Spectrum +3
Fixed esxdos handler call F_GETCWD when root directory (/)
Fixed esxdos handler call F_GETCWD when directory does not exist
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll
Fixed Cassette out sound: allow to hear it on computers: Jupiter Ace, CPC, MSX, Spectravideo
Fixed memory map and behaviour on Jupiter Ace: now it's perfect and better than any other emulator
Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)