@@ -84,6 +84,7 @@ Mejorado ZX Vision:
 - Al seleccionar estilo de ZX Vision Style, se aplica al mover el cursor
 - Mejorar movimiento del cursor en menús al pulsar PgDn/PgUp
 - Permitir teclas Inicio/Fin en ventanas
+- Agregada opción para permitir usar teclas 5678 como cursores en el menú
 - Ventana de Video layers ahora se puede tener en segundo plano
 - Ventana de Debug DMA ahora se puede tener en segundo plano
 - Avisar en la marca de redimensionado cuando una ventana se tiene que aumentar de tamaño (porque hay texto mas allá del tamaño actual)
