@@ -2158,6 +2158,11 @@ void menu_interface_previous_submenus(MENU_ITEM_PARAMETERS)
     else menu_show_submenus_tree.v=1;
 }
 
+void menu_movement_numbers(MENU_ITEM_PARAMETERS)
+{
+    zxvision_setting_movement_numbers.v ^=1;
+}
+
 void menu_zxvision_settings(MENU_ITEM_PARAMETERS)
 {
     menu_item *array_menu_common;
@@ -2420,6 +2425,13 @@ void menu_zxvision_settings(MENU_ITEM_PARAMETERS)
         menu_add_item_menu_prefijo_format(array_menu_common,"[%c] ",(menu_mouse_right_send_esc.v ? 'X' : ' ') );
         menu_add_item_menu_tooltip(array_menu_common,"Right button mouse simulate ESC key or secondary actions");
         menu_add_item_menu_ayuda(array_menu_common,"Right button mouse simulate ESC key or secondary actions");
+        menu_add_item_menu_es_avanzado(array_menu_common);
+
+		menu_add_item_menu_en_es_ca(array_menu_common,MENU_OPCION_NORMAL,menu_movement_numbers,NULL,
+            "Menu movement with 5678","Movimiento menú con 5678","Moviment menú amb 5678");
+        menu_add_item_menu_prefijo_format(array_menu_common,"[%c] ",(zxvision_setting_movement_numbers.v ? 'X' : ' ') );
+        menu_add_item_menu_tooltip(array_menu_common,"Use keys 5678 as cursors on menu");
+        menu_add_item_menu_ayuda(array_menu_common,"Use keys 5678 as cursors on menu");
         menu_add_item_menu_es_avanzado(array_menu_common);
 
 
