@@ -398,6 +398,9 @@ char online_download_path[PATH_MAX]="";
 //Busqueda de menus
 z80_bit index_menu_enabled={1};
 
+//Movimiento menu con teclas 5678, para teclados simples como el ZX Recreated
+z80_bit zxvision_setting_movement_numbers={0};
+
 //
 // Keyboard Settings
 //
