@@ -182,5 +182,7 @@ extern z80_bit opcion_no_welcome_message;
 
 extern z80_bit zxvision_topbar_menu_enabled;
 
+extern z80_bit zxvision_setting_movement_numbers;
+
 #endif
 
