@@ -1716,6 +1716,7 @@ printf("\n"
         "--no-change-frame-resize-zone            Do not change frame window when mouse if over resize zone\n"
 		"--invert-menu-mouse-scroll               Inverts mouse scroll movement\n"
         "--right-mouse-esc                        Right button mouse simulates ESC key and not secondary actions\n"
+        "--zxvision-cursors-5678                  Use keys 5678 as cursors on menu\n"
         "--process-switcher-immutable             Massive actions on menu Windows, like minimize all, cascade, etc, don't affect the Process switcher window\n"
         "--process-switcher-always-visible        Process switcher is always visible (on top of all windows)\n"
         "--process-switcher-no-left-bottom        Do not force process switcher to be located at left-bottom part of the display\n"
@@ -5133,6 +5134,10 @@ int parse_cmdline_options(int desde_commandline) {
 			else if (!strcmp(argv[puntero_parametro],"--right-mouse-esc")) {
                 menu_mouse_right_send_esc.v=1;
 			}
+
+            else if (!strcmp(argv[puntero_parametro],"--zxvision-cursors-5678")) {
+                zxvision_setting_movement_numbers.v=1;
+            }
 
             else if (!strcmp(argv[puntero_parametro],"--process-switcher-immutable")) {
                 setting_process_switcher_immutable.v=1;
