@@ -4242,6 +4242,8 @@ int util_write_configfile(void)
 
   if (menu_mouse_right_send_esc.v)          ADD_STRING_CONFIG,"--right-mouse-esc");
 
+  if (zxvision_setting_movement_numbers.v)  ADD_STRING_CONFIG,"--zxvision-cursors-5678");
+
   if (setting_process_switcher_immutable.v)     ADD_STRING_CONFIG,"--process-switcher-immutable");
 
   if (setting_process_switcher_always_visible.v)     ADD_STRING_CONFIG,"--process-switcher-always-visible");
